Refactor organization controller