@@ -5,7 +5,6 @@ import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.methodOn;
 
 import java.util.Objects;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.DeleteMapping;
@@ -82,7 +81,7 @@ class OrganizationController {
             @RequestParam(value = "pageSize", required = false) Integer pageSize) {
         var page = organizationService.read(criteria, pageNumber, pageSize);
 
-        var organizations = page.getContent().stream().map(this::toDto).collect(Collectors.toList());
+        var organizations = page.getContent().stream().map(this::toDto).toList();
 
         var pageDto = new PageDto<>(organizations, page.getNumber(), page.getSize(), page.getTotalPages(),
                 page.getNumberOfElements(), page.getTotalElements());
